tests/ui/macros/builtin-prelude-no-accidents.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `env`
  --> $DIR/builtin-prelude-no-accidents.rs:5:5
   |
LL |     env::current_dir;
   |     ^^^ use of undeclared crate or module `env`
   |
help: consider importing this module
   |
LL + use std::env;
   |

error[E0433]: failed to resolve: use of undeclared crate or module `panic`
  --> $DIR/builtin-prelude-no-accidents.rs:6:14
   |
LL |     type A = panic::PanicInfo;
   |              ^^^^^ use of undeclared crate or module `panic`
   |
help: consider importing this module
   |
LL + use std::panic;
   |

error[E0433]: failed to resolve: use of undeclared crate or module `vec`
  --> $DIR/builtin-prelude-no-accidents.rs:7:14
   |
LL |     type B = vec::Vec<u8>;
   |              ^^^ use of undeclared crate or module `vec`
   |
help: consider importing this module
   |
LL + use std::vec;
   |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0433`.
